# netif

./: .cirrus.yml  .clang-format  .dockerignore  .drone.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  azure-pipelines.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  support-or-design-question.md
.github/workflows/: build.yml
gmlc/netif/: NetIF.hpp
tests/: CMakeLists.txt  Dockerfile  GetAddressTests.cpp  InterfaceParser.hpp  README.md  docker-compose.yml  docker-entrypoint.sh  example-ci-workflow.yml  setup_virtual_interfaces.sh
